--- a/src/main/MainMenu.fxml
+++ b/src/main/MainMenu.fxml
@@ -3,7 +3,7 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane id="AnchorPane" fx:id="PaneRoot" prefHeight="600.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="main.MainMenuController">
+<AnchorPane id="AnchorPane" fx:id="PaneRoot" prefHeight="600.0" prefWidth="900.0" style="-fx-background-image: url(&quot;Images/BackGroundProgra.png&quot;); -fx-background-size: 900 600;" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="main.MainMenuController">
    <children>
       <Button fx:id="btnStartL" layoutX="93.0" layoutY="354.0" mnemonicParsing="false" onAction="#btnStartL" prefHeight="20.0" prefWidth="58.0" text="Start" />
       <Button fx:id="btnStartR" layoutX="722.0" layoutY="341.0" mnemonicParsing="false" onAction="#btnStartR" prefHeight="20.0" prefWidth="58.0" text="Start" />
